objects/Invoices__c.object
<CustomObject>
    <description>Invoices for PV Direct</description>
    <fields>
        <fullName>ATTN__c</fullName>
        <label>ATTN:</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <formula>Project__r.Account__r.Name &amp; BR() &amp;
Project__r.Account__r.BillingStreet  &amp; BR() &amp;
Project__r.Account__r.BillingCity &amp; &quot;, &quot; &amp;
Project__r.Account__r.BillingState  &amp; &quot;  &quot; &amp;Project__r.Account__r.BillingPostalCode</formula>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Account2__c</fullName>
        <formula>Project__r.Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_To_Borrego_Additional__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Summation of all additional costs to be added to the Project object Cost To Borrego field upon Invoice approval.  These additional costs come from the items of this invoice added to Cost To Customer reaching or exceeding the Not To Exceed value.</description>
        <label>Cost To Borrego (Additional)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_To_Customer__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Amount of Cost To Customer on this invoice (PV Direct).  Used to update the project object Cost To Customer Feasibility upon invoice approval.</description>
        <label>Cost To Customer</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Job_Number__c</fullName>
        <formula>Project__r.Job_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <label>Payment Terms</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phase__c</fullName>
        <label>Phase</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>SFDC_Project__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>RE__c</fullName>
        <label>RE:</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retainer_Amount_Used__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Amount of remaining Retainer used up by other costs on this invoice.  Used to update the Project object field Retainer Amount Left (Feasibility) upon invoice approval.</description>
        <label>Retainer Amount Used</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Retainer_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total amount of Retainer cost items on this invoice.  Used to update the Project object field Retainer Amount Left (Feasibility) upon invoice approval.</description>
        <label>Retainer Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Retainer_Available__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total Retainer available to be applied to this invoice.</description>
        <label>Retainer Available</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scope_Items__c</fullName>
        <label>Scope Items</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Submitted to Customer</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Charges__c</fullName>
        <label>Total Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Cost_Invoice__c</fullName>
        <label>Total Cost (Invoice)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Invoice</label>
    <nameField>
        <displayFormat>INV-{0000}</displayFormat>
        <label>Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>